Reformat code correctly and apply changes reported by SonarLint